# SGNParking

./: CMakeLists.txt  cacert.pem
include/: AdminPage.h  BaseBot.h  BotKeyboards.h  Constants.h  DBInterface.h  DateTime.h  EntryPage.h  ExitPage.h  HomePage.h  HttpClient.h  Logger.h  TelegramBot.h
src/: AdminPage.cpp  DBInterface.cpp  Daemon.cpp  EntryPage.cpp  ExitPage.cpp  HomePage.cpp  HttpClient.cpp  Logger.cpp  TelegramBot.cpp
